--- a/ctf/test/integration.html
+++ b/ctf/test/integration.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Testing</title>
+    <title>Integration tests</title>
 </head>
 <body>
     <script src="../../thirdparty/p5.min.js"></script>
     <script src="../utils.js"></script>
     <script src="../elements.js"></script>
     <script src="testframework.js"></script>
-    <script src="unit.js"></script>
-    <!-- <script src="integration.js"></script> -->
+    <script src="integration.js"></script>
 </body>
 </html>
